<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/full_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        android:text=""
        android:textSize="12dp"
        android:fontFamily="monospace"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/full_name"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        android:textSize="12dp"
        android:fontFamily="monospace"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:textSize="12dp"
        android:fontFamily="monospace"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/re_enter_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:textSize="12dp"
        android:fontFamily="monospace"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/date_of_birth"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@id/re_enter_password"
        app:layout_constraintTop_toBottomOf="@id/re_enter_password"
        android:textSize="12dp"
        android:fontFamily="monospace"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/re_enter_password"
        app:layout_constraintTop_toBottomOf="@id/re_enter_password"
        android:id="@+id/date_picker_btn"
        android:text="@string/date_picker"
        android:textSize="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_rect_shape"
        android:fontFamily="monospace"/>
    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth"
        app:layout_constraintEnd_toEndOf="@+id/date_picker_btn"
        android:orientation="horizontal"
        android:id="@+id/gender_options"
        android:gravity="center"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/option_male"
            android:text="@string/male"
            android:textSize="12dp"
            android:layout_margin="5dp"
            android:fontFamily="monospace"
            />

        <RadioButton
            android:id="@+id/option_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_margin="5dp"
            android:textSize="12dp"
            android:fontFamily="monospace"/>

    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gender_options"
        app:layout_constraintEnd_toEndOf="@+id/gender_options"
        android:id="@+id/registration_btn"
        android:text="@string/register"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_rect_shape"
        android:textSize="12dp"
        android:fontFamily="monospace"
        />
    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registration_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/info_txtview"
        android:layout_marginTop="5dp"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>